# vibe-coding-based-player

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml
docs/: python3_rewrite_feasibility.md
i18n/: vibe-player_zh_CN.qm  vibe-player_zh_CN.ts
include/: AcoustIdClient.h  AudioDecoder.h  AudioFingerprinter.h  AudioPlayer.h  CoverArtProvider.h  GuiApp.h  I18n.h  LyricsProvider.h  MetadataProvider.h  MetadataWriter.h  Player.h  PlayerController.h  Playlist.h  TranslationManager.h  UI.h  player.hpp
src/: AcoustIdClient.cpp  AlbumArtDisplay.qml  AudioDecoder.cpp  AudioFingerprinter.cpp  AudioPlayer.cpp  CMakeLists.txt  CoverArtProvider.cpp  GlassButton.qml  GlassPanel.qml  GlowSlider.qml  GuiApp.cpp  I18n.cpp  ImmersiveLyrics.qml  LyricsProvider.cpp  MeshGradientBackground.qml  MetadataProvider.cpp  MetadataWriter.cpp  ParticleField.qml  Player.cpp  PlayerController.cpp  Playlist.cpp  TranslationManager.cpp  UI.cpp  main.cpp  main.qml  miniaudio_impl.c
tests/: CMakeLists.txt  test_main.cpp
